update teardown script

--- a/notebooks/ingestion-and-chunking/_nbtest.teardown.ipynb
+++ b/notebooks/ingestion-and-chunking/_nbtest.teardown.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1422b7bb-bc8c-42bb-b070-53fce3cf6144",
    "metadata": {},
    "outputs": [],
@@ -27,17 +27,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e4a89367-d23a-4340-bc92-2dcabd18adcd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'acknowledged': True})"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "client.indices.delete(index=\"*_chunked_index\", ignore_unavailable=True)"
+    "client.indices.delete(\n",
+    "    index=\"json_chunked_index,pdf_chunked_index,website_chunked_index\",\n",
+    "    ignore_unavailable=True,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4ac37f1b-6122-49fe-a3b8-e8f2025a0961",
    "metadata": {},
    "outputs": [],
@@ -65,7 +79,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.3"
   }
  },
  "nbformat": 4,
