updates to see if passes

--- a/notebooks/ingestion-and-chunking/json-chunking-ingest.ipynb
+++ b/notebooks/ingestion-and-chunking/json-chunking-ingest.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -27,17 +27,7 @@
     "id": "zQlYpYkI46Ff",
     "outputId": "83677846-8a6a-4b49-fde0-16d473778814"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.0\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install -qU  pypdf langchain_community langchain elasticsearch tiktoken langchain-elasticsearch jq"
    ]
@@ -53,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "id": "DofNZ2w25nIr"
    },
@@ -198,39 +188,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "id": "0xtdeIJI9N9-"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<langchain_elasticsearch.vectorstores.ElasticsearchStore at 0x1163a9510>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain_elasticsearch import ElasticsearchStore\n",
     "\n",
     "INDEX_NAME = \"json_chunked_index\"\n",
     "\n",
-    "vector_store = ElasticsearchStore(\n",
-    "    es_connection=client,\n",
-    "    index_name=INDEX_NAME,\n",
-    ")\n",
-    "\n",
-    "vector_store.from_documents(\n",
+    "ElasticsearchStore.from_documents(\n",
     "    docs,\n",
     "    es_connection=client,\n",
     "    index_name=INDEX_NAME,\n",
     "    strategy=ElasticsearchStore.SparseVectorRetrievalStrategy(model_id=model),\n",
     "    bulk_kwargs={\n",
-    "        \"request_timeout\": 60,\n",
+    "        \"request_timeout\": 180,\n",
     "    },\n",
     ")"
    ]
