--- a/notebooks/ingestion-and-chunking/website-chunking-ingest.ipynb
+++ b/notebooks/ingestion-and-chunking/website-chunking-ingest.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -27,17 +27,7 @@
     "id": "zQlYpYkI46Ff",
     "outputId": "83677846-8a6a-4b49-fde0-16d473778814"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.0\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install -qU  pypdf langchain_community langchain elasticsearch tiktoken langchain-elasticsearch unstructured"
    ]
@@ -53,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "DofNZ2w25nIr"
    },
@@ -71,7 +61,7 @@
     "client = Elasticsearch(\n",
     "    # For local development\n",
     "    # \"http://localhost:9200\",\n",
-    "    # basic_auth=(\"elastic\", \"changeme\")\n",
+    "    # basic_auth=(\"elastic\", \"changeme\"),\n",
     "    cloud_id=ELASTIC_CLOUD_ID,\n",
     "    api_key=ELASTIC_API_KEY,\n",
     ")"
@@ -170,22 +160,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "id": "0xtdeIJI9N9-"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<langchain_elasticsearch.vectorstores.ElasticsearchStore at 0x32003b5b0>"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain_elasticsearch import ElasticsearchStore\n",
     "\n",
