--- a/notebooks/ingestion-and-chunking/json-chunking-ingest.ipynb
+++ b/notebooks/ingestion-and-chunking/json-chunking-ingest.ipynb
@@ -125,7 +125,7 @@
     "id": "wqYXqJxn9JsA"
    },
    "source": [
-    "## Loading a webpage, creating chunks into docs\n",
+    "## Loading a JSON file, creating chunks into docs\n",
     "This will load the webpage from the url provided, and then chunk the html text into passage docs."
    ]
   },
