--- a/notebooks/ingestion-and-chunking/pdf-chunking-ingest.ipynb
+++ b/notebooks/ingestion-and-chunking/pdf-chunking-ingest.ipynb
@@ -171,12 +171,7 @@
     "\n",
     "INDEX_NAME = \"pdf_chunked_index\"\n",
     "\n",
-    "vector_store = ElasticsearchStore(\n",
-    "    es_connection=client,\n",
-    "    index_name=INDEX_NAME,\n",
-    ")\n",
-    "\n",
-    "vector_store.from_documents(\n",
+    "ElasticsearchStore.from_documents(\n",
     "    docs,\n",
     "    es_connection=client,\n",
     "    index_name=INDEX_NAME,\n",
