--- a/notebooks/ingestion-and-chunking/website-chunking-ingest.ipynb
+++ b/notebooks/ingestion-and-chunking/website-chunking-ingest.ipynb
@@ -29,7 +29,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install -qU  pypdf langchain_community langchain elasticsearch tiktoken langchain-elasticsearch unstructured"
+    "!pip install -qU langchain_community langchain elasticsearch tiktoken langchain-elasticsearch unstructured"
    ]
   },
   {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "7bN32vunqIk2"
    },
@@ -170,12 +170,7 @@
     "\n",
     "INDEX_NAME = \"website_chunked_index\"\n",
     "\n",
-    "vector_store = ElasticsearchStore(\n",
-    "    es_connection=client,\n",
-    "    index_name=INDEX_NAME,\n",
-    ")\n",
-    "\n",
-    "vector_store.from_documents(\n",
+    "ElasticsearchStore.from_documents(\n",
     "    docs,\n",
     "    es_connection=client,\n",
     "    index_name=INDEX_NAME,\n",
