--- a/notebooks/document-chunking/with-langchain-splitters.ipynb
+++ b/notebooks/document-chunking/with-langchain-splitters.ipynb
@@ -562,7 +562,7 @@
     "        filter: List[dict],\n",
     "        **kwargs,\n",
     "    ):\n",
-    "        es_query = {\n",
+    "        return {\n",
     "            \"knn\": {\n",
     "                \"inner_hits\": {\"_source\": False, \"fields\": [\"passages.text\"]},\n",
     "                \"field\": \"passages.vector.predicted_value\",\n",
@@ -577,8 +577,6 @@
     "                },\n",
     "            }\n",
     "        }\n",
-    "\n",
-    "        return es_query\n",
     "\n",
     "\n",
     "vector_store = ElasticsearchStore(\n",
