made single search variable

--- a/supporting-blog-content/introducing-retrievers/retrievers_intro_notebook.ipynb
+++ b/supporting-blog-content/introducing-retrievers/retrievers_intro_notebook.ipynb
@@ -642,25 +642,10 @@
     "es.ingest.put_pipeline(id=\"elser_e5_embed\", body=pipeline_body)"
    ],
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "B8Gxm6mGstH0",
-    "outputId": "3f9a9957-e30e-4d99-b74a-0058dba94cb6"
+    "id": "B8Gxm6mGstH0"
    },
    "execution_count": null,
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "ObjectApiResponse({'acknowledged': True})"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 13
-    }
-   ]
+   "outputs": []
   },
   {
    "cell_type": "markdown",
@@ -765,6 +750,28 @@
   {
    "cell_type": "markdown",
    "source": [
+    "We are going to search the `overview` field (either the text or embedding) in the dataset for movies using the search input <font color='orange'>clueless slackers</font>\n",
+    "\n",
+    "Feel free to change the `movie_search` variable below to something else"
+   ],
+   "metadata": {
+    "id": "Nc2jogPBc3UZ"
+   }
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "movie_search = \"clueless slackers\""
+   ],
+   "metadata": {
+    "id": "tb-M-FqSdHa0"
+   },
+   "execution_count": 21,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Standard - Search All the Text! - bm25"
    ],
    "metadata": {
@@ -777,7 +784,7 @@
     "response = es.search(\n",
     "    index=\"imdb_movies\",\n",
     "    body={\n",
-    "        \"query\": {\"term\": {\"overview\": \"clueless\"}},\n",
+    "        \"query\": {\"match\": {\"overview\": movie_search}},\n",
     "        \"size\": 3,\n",
     "        \"fields\": [\"names\", \"overview\"],\n",
     "        \"_source\": False,\n",
@@ -792,9 +799,9 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "MSCPBLRWEEjH",
-    "outputId": "fed13a15-619b-40b0-9204-49e3bc021d6b"
+    "outputId": "724506f6-3f1a-4583-f62f-abcd51d2d423"
    },
-   "execution_count": null,
+   "execution_count": 24,
    "outputs": [
     {
      "output_type": "stream",
@@ -834,7 +841,7 @@
     "                \"query_vector_builder\": {\n",
     "                    \"text_embedding\": {\n",
     "                        \"model_id\": \".multilingual-e5-small_linux-x86_64\",\n",
-    "                        \"model_text\": \"clueless slackers\",\n",
+    "                        \"model_text\": movie_search,\n",
     "                    }\n",
     "                },\n",
     "                \"k\": 5,\n",
@@ -855,9 +862,9 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "M5LjVfhhELQB",
-    "outputId": "5a276e37-b6e8-4aae-effc-8192b0ef1634"
+    "outputId": "ff31c1ea-6389-4c12-f626-6189ab29463e"
    },
-   "execution_count": null,
+   "execution_count": 25,
    "outputs": [
     {
      "output_type": "stream",
@@ -897,7 +904,7 @@
     "                    \"text_expansion\": {\n",
     "                        \"overview_sparse\": {\n",
     "                            \"model_id\": \".elser_model_2_linux-x86_64\",\n",
-    "                            \"model_text\": \"clueless slackers\",\n",
+    "                            \"model_text\": movie_search,\n",
     "                        }\n",
     "                    }\n",
     "                }\n",
@@ -917,9 +924,9 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "DBME24ECENT_",
-    "outputId": "8cc3f595-233d-4a22-eb00-a42d5fff8155"
+    "outputId": "f7a02132-d13f-4ed0-fc1f-1413babcbdb3"
    },
-   "execution_count": null,
+   "execution_count": 26,
    "outputs": [
     {
      "output_type": "stream",
@@ -956,18 +963,14 @@
     "        \"retriever\": {\n",
     "            \"rrf\": {\n",
     "                \"retrievers\": [\n",
-    "                    {\n",
-    "                        \"standard\": {\n",
-    "                            \"query\": {\"term\": {\"overview\": \"clueless slackers\"}}\n",
-    "                        }\n",
-    "                    },\n",
+    "                    {\"standard\": {\"query\": {\"term\": {\"overview\": movie_search}}}},\n",
     "                    {\n",
     "                        \"knn\": {\n",
     "                            \"field\": \"overview_dense\",\n",
     "                            \"query_vector_builder\": {\n",
     "                                \"text_embedding\": {\n",
     "                                    \"model_id\": \".multilingual-e5-small_linux-x86_64\",\n",
-    "                                    \"model_text\": \"clueless slackers\",\n",
+    "                                    \"model_text\": movie_search,\n",
     "                                }\n",
     "                            },\n",
     "                            \"k\": 5,\n",
@@ -980,7 +983,7 @@
     "                                \"text_expansion\": {\n",
     "                                    \"overview_sparse\": {\n",
     "                                        \"model_id\": \".elser_model_2_linux-x86_64\",\n",
-    "                                        \"model_text\": \"clueless slackers\",\n",
+    "                                        \"model_text\": movie_search,\n",
     "                                    }\n",
     "                                }\n",
     "                            }\n",
@@ -1005,9 +1008,9 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "uS7iGJZFEP72",
-    "outputId": "60b186a6-5ec7-4e88-9b22-3021ed2ded37"
+    "outputId": "29ec813f-c4c8-491f-9459-60f5b77d469b"
    },
-   "execution_count": null,
+   "execution_count": 27,
    "outputs": [
     {
      "output_type": "stream",
