made single search variable

--- a/supporting-blog-content/introducing-retrievers/retrievers_intro_notebook.ipynb
+++ b/supporting-blog-content/introducing-retrievers/retrievers_intro_notebook.ipynb
@@ -32,12 +32,12 @@
     "In this notebook you will:\n",
     "- Download IMDB dataset from Kaggle\n",
     "- Create a new Elasticsearch Serverless Search Project\n",
-    "- Craete two inference services\n",
+    "- Create two inference services\n",
     "- Deploy ELSER\n",
     "- Deploy e5-small\n",
     "- Create ingest pipeline\n",
     "- Create mapping\n",
-    "- Ingest the IMDB data, creating emdedding as part of ingest\n",
+    "- Ingest the IMDB data, creating embedding as part of ingest\n",
     "- Scale down models for query load\n",
     "- Run example retrievers"
    ],
