replace eland pin on 8.12 with an exemption list

--- a/notebooks/document-chunking/with-index-pipelines.ipynb
+++ b/notebooks/document-chunking/with-index-pipelines.ipynb
@@ -54,7 +54,7 @@
    },
    "outputs": [],
    "source": [
-    "!python3 -m pip install -qU elasticsearch eland==8.12.1"
+    "!python3 -m pip install -qU elasticsearch eland"
    ]
   },
   {
