--- a/notebooks/integrations/hugging-face/loading-model-from-hugging-face.ipynb
+++ b/notebooks/integrations/hugging-face/loading-model-from-hugging-face.ipynb
@@ -47,7 +47,7 @@
    },
    "outputs": [],
    "source": [
-    "!python3 -m pip install sentence-transformers eland==8.12.1 elasticsearch transformers"
+    "!python3 -m pip install sentence-transformers eland elasticsearch transformers"
    ]
   },
   {
