--- a/notebooks/langchain/langchain-using-own-model.ipynb
+++ b/notebooks/langchain/langchain-using-own-model.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python3 -m pip install -qU langchain langchain-elasticsearch tiktoken  sentence-transformers eland==8.12.1 transformers\n",
+    "!python3 -m pip install -qU langchain langchain-elasticsearch tiktoken  sentence-transformers eland transformers\n",
     "\n",
     "from getpass import getpass\n",
     "from langchain_elasticsearch import ElasticsearchStore\n",
