Add per-version testing restrictions (#246)
* Add per-version testing restrictions

* updated testing documentation

* replace eland pin on 8.12 with an exemption list

--- a/notebooks/document-chunking/with-index-pipelines.ipynb
+++ b/notebooks/document-chunking/with-index-pipelines.ipynb
@@ -54,7 +54,7 @@
    },
    "outputs": [],
    "source": [
-    "!python3 -m pip install -qU elasticsearch eland==8.12.1"
+    "!python3 -m pip install -qU elasticsearch eland"
    ]
   },
   {
@@ -84,6 +84,7 @@
    "source": [
     "from elasticsearch import Elasticsearch\n",
     "from getpass import getpass\n",
+    "import time\n",
     "\n",
     "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#finding-your-cloud-id\n",
     "ELASTIC_CLOUD_ID = getpass(\"Elastic Cloud ID: \")\n",
