--- a/supporting-blog-content/introducing-retrievers/retrievers_intro_notebook.ipynb
+++ b/supporting-blog-content/introducing-retrievers/retrievers_intro_notebook.ipynb
@@ -198,6 +198,8 @@
    "source": [
     "[Follow the steps in the guide here](https://www.elastic.co/guide/en/cloud/current/ec-api-authentication.html)\n",
     "\n",
+    "When you create the key, ensure you select \"Admin\" access level\n",
+    "\n",
     "Copy the key someplace safe, you will use it in the next cell"
    ],
    "metadata": {
@@ -207,7 +209,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Elasticsearch Setup"
+    "## Elasticsearch Setup\n",
+    "When you run the cell below you will be prompted to enter your Cloud API Key"
    ],
    "metadata": {
     "id": "RsgZevjOzFp8"
@@ -371,7 +374,7 @@
    "cell_type": "code",
    "source": [
     "try:\n",
-    "    resp = es.inference.put_model(\n",
+    "    resp = es.options(request_timeout=5).inference.put_model(\n",
     "        task_type=\"sparse_embedding\",\n",
     "        inference_id=\"my-elser-model\",\n",
     "        body={\n",
